@@ -4,6 +4,7 @@
 BZFlag 2.1.0
 ------------
 
+* Input fixes and improvements (see ChangeLog) - Daniel Remenak, Workaphobia
 * Flag hiding work even when Identity flag is on - Alfredo Tupone
 * Flag grabbing & identifying made server side - Alfredo Tupone
 * Jitter Kick - Thomas Stauer
